--- a/visualize/generate-example.qmd
+++ b/visualize/generate-example.qmd
@@ -45,6 +45,7 @@ region_parameters <- data.frame(
     phi_gamma = c(1, 1.1, 1.2),
     tau_gamma = c(1/2, 1/3, 1/4),
     k_gamma = c(2.3, 2.1, 2.1),
+    nugget_gamma = c(0.05, 0.05, 0.05),
     mean = c(-10, 1, 10),
     row.names = c("region1", "region2", "region3")
 )
